<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Service Separate APP</string>
    <string name="service_name">Service Separate</string>
    <string name="service_start_preference">Service Start Mode</string>
    <string name="action_settings">Settings</string>

    <string name="welcome_title">MultiStart Service Demo</string>
    <string name="service_info">Service info</string>
    <string name="internet_download">Download from Internet</string>
    <string name="service_start">Start Service</string>
    <string name="service_stop">Downloader Service is stopped</string>
    
    <string name="selectStartMode">Start Service: </string>
    <string name="cb_on_boot">on BOOT</string>
    <string name="cb_on_app_load">on APP load</string>
    
    <string name="empty_line">></string>
    
    <string name="selectGroup">Run:</string>
    <string name="selectOnClick">Once</string>
    <string name="select1min">1 min</string>
    <string name="select5min">5 min</string>
    
    <string name="alert_dialog_mode_choice">Select Message Source</string>
    <string name="alert_dialog_ok">OK</string>
    <string name="alert_dialog_cancel">Cancel</string>
    
</resources>
