<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/textViewTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:text="@string/welcome_title"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/textSelectStartMode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
		android:layout_alignParentLeft="true"
		android:layout_below="@+id/textViewTitle"
		android:layout_marginTop="17dp"
        android:maxLines="1"
        android:scrollbars="none"
        android:text="@string/selectStartMode"
        android:textAppearance="?android:attr/textAppearanceSmall"
        
          />
    
    
    <CheckBox
        android:id="@+id/checkBoxBoot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"    
        android:layout_toRightOf="@+id/textSelectStartMode"
        android:layout_marginTop="10dp"
        android:text="@string/cb_on_boot"
        android:textAppearance="?android:attr/textAppearanceSmall" 
        android:layout_below="@+id/textViewTitle"
        />

            <!-- android:layout_below="@+id/textViewTitle" 
            android:layout_alignParentLeft="true"
             -->
            
    <CheckBox
        android:id="@+id/checkBoxAppLoad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewTitle"
        android:layout_toRightOf="@+id/checkBoxBoot"
        android:layout_marginTop="10dp"
        android:text="@string/cb_on_app_load"
        android:textAppearance="?android:attr/textAppearanceSmall" 
        />
    
    <RadioGroup
        android:id="@+id/radioSelectInterval"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textSelectStartMode"
        android:contentDescription="@string/selectGroup"
        android:orientation="horizontal" 
        android:layout_marginTop="10dp"
        >

		     <TextView
		         android:id="@+id/textViewRadio"
		         android:layout_width="wrap_content"
		         android:maxLines="1"
		         android:scrollbars="none"
		         android:text="@string/selectGroup"
		         android:textAppearance="?android:attr/textAppearanceSmall"
		          />
        
        	<RadioButton 
        		android:id="@+id/radioOnClick"
            	android:layout_width="wrap_content"
            	android:layout_height="wrap_content"
            	android:text="@string/selectOnClick"
            	android:checked="true"
            	android:padding="2dp"
            	android:onClick="onRadioButtonClicked"
        	    />
        	
        	<RadioButton 
        		android:id="@+id/radioOneMin"
            	android:layout_width="wrap_content"
            	android:layout_height="wrap_content"
            	android:text="@string/select1min"
            	android:checked="false"
            	android:padding="2dp"
            	android:onClick="onRadioButtonClicked"
        	    />

        	<RadioButton 
        		android:id="@+id/radioFiveMin"
            	android:layout_width="wrap_content"
            	android:layout_height="wrap_content"
            	android:text="@string/select5min"
            	android:checked="false"
            	android:padding="2dp"
            	android:onClick="onRadioButtonClicked"
        	    />
        	
    </RadioGroup>
    
    <ImageButton
        android:id="@+id/imageButtonStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/service_start"
        android:onClick="onButtonStartClick"
        android:src="@drawable/actionsprocessstarticon64x64"
        android:layout_below="@+id/radioSelectInterval"
         />
        
    <ImageButton
        android:id="@+id/imageButtonStop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/radioSelectInterval"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_toRightOf="@+id/imageButtonStart"
        android:contentDescription="@string/service_info"
        android:onClick="onButtonStopClick"
        android:src="@drawable/actionsprocessstopicon64x64" />

    <ImageButton
        android:id="@+id/imageButtonInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/radioSelectInterval"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_toRightOf="@+id/imageButtonStop"
        android:contentDescription="@string/service_info"
        android:onClick="onButtonInfoClick"
        android:src="@drawable/actionsinfoicon64x64" />

     <ImageButton
        android:id="@+id/imageButtonConfigure"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/radioSelectInterval"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_toRightOf="@+id/imageButtonInfo"
        android:contentDescription="@string/service_info"
        android:onClick="onButtonConfigureClick"
        android:src="@drawable/actionsconfigureicon64x64" />
    
     <Button android:id="@+id/buttonSelectMode"
        android:layout_width="match_parent" 
        android:layout_height="wrap_content"
        android:text="@string/alert_dialog_mode_choice"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/imageButtonStart"
        android:onClick="onButtonSelectModeClick"
            /> 
     
    <TextView
        android:id="@+id/textViewNote"
        android:layout_width="wrap_content"
        android:layout_height="150dp"
        android:layout_below="@+id/buttonSelectMode"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:maxLines="10"
        android:scrollbars="vertical"
        android:text="@string/empty_line" />
    

    <TextView 
        android:id="@+id/textViewTicker"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/empty_line"
        />


</RelativeLayout>
